SalesforceRecruitingOnSecondOrg/src/objects/CandidateCV__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Age__c</fullName>
        <label>Candidate Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Photo__c</fullName>
        <label>Candidate Photo</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Employed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CandidateCV</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CandidateCV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CandidatesCVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>